labmap/labmap_Deployment_labmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labmap
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: labmap
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: labmap
    spec:
      containers:
      - image: harbor.ocf.berkeley.edu/ocf/labmap/labmap:c9ab0f6be77baa4b637ed0afec9c3a3cff600609
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 3000
