labmap/labmap_Service_labmap.yaml
apiVersion: v1
kind: Service
metadata:
  name: labmap
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    transpire.ocf.io/deployment: labmap
